--- a/Server/Dockerfile
+++ b/Server/Dockerfile
@@ -1,19 +1,21 @@
-# Etapa 1: build y entorno de desarrollo
+# Etapa 1: build y entorno de producción
 FROM node:18
 
 # Establece el directorio de trabajo
 WORKDIR /app
 
-# Copia los archivos del proyecto
+# Copia archivos necesarios
 COPY package*.json tsconfig*.json ./
-COPY src ./src
-
-# Instala dependencias
 RUN npm install
 
+# Copia el resto del código fuente
+COPY ./src ./src
 
-# Expone el puerto donde corre tu API (asegúrate que coincide con tu app, p.ej., 3001)
+# Compilar TypeScript
+RUN npm run build
+
+# Exponer el puerto que usa la app
 EXPOSE 3000
 
-# Comando para desarrollo (puedes cambiar por otro si usas build separado)
-CMD ["npx", "nodemon", "--exec", "ts-node", "src/index.ts"]
+# Ejecutar la aplicación compilada
+CMD ["node", "dist/index.js"]
