--- a/Server/package.json
+++ b/Server/package.json
@@ -4,7 +4,9 @@
   "description": "REST API'S con Express y typescript",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon --exec ts-node src/index.ts"
+    "dev": "nodemon --exec ts-node src/index.ts",
+    "build": "tsc",
+    "start": "node dist/index.js"
   },
   "author": "Miriam Martinez",
   "license": "ISC",
