--- a/Server/tsconfig.json
+++ b/Server/tsconfig.json
@@ -1,18 +1,17 @@
 {
     "compilerOptions": {
-        "strict": false, // Enable all strict type-checking options
-        "esModuleInterop": true, // Enable compatibility with CommonJS and ES Modules
-        "outDir": "./dist", // Redirect output structure to the directory
-        "rootDir": "./src", // Specify the root directory of input files
-        "lib": ["ESNext"], // Specify library files to be included in the compilation
+        "strict": false,
+        "esModuleInterop": true,
+        "outDir": "./dist",
+        "rootDir": "./src",
+        "lib": ["ESNext"],
         "target": "ESNext",
-        "moduleResolution": "NodeNext",
-        "module": "NodeNext",
+        "module": "commonjs",
+        "moduleResolution": "node",
         "sourceMap": false,
-        "declaration": true, // Generate corresponding '.d.ts' file
+        "declaration": true,
         "experimentalDecorators": true,
         "emitDecoratorMetadata": true
-    
     },
-    "include": ["src/**/*.ts"], // Include all TypeScript files in the src directory
+    "include": ["src/**/*.ts"]
 }
