--- a/Client/nginx/default.conf
+++ b/Client/nginx/default.conf
@@ -9,7 +9,7 @@ server {
     }
 
     location /api/ {
-        proxy_pass http://server:3000;
+        proxy_pass https://api-fullstack-ec2h.onrender.com;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
